Ensure doc website looks good on mobile devices (#2749)
* Adjust styles of the index page

* Adjust width of doc pages on mobile so that they don't exceed the viewport width

* prevent code blocks from overflowing the page

* Wrap each ..list-table into a div

* Adjust margins of sections and lists in mobile view

* adjust position of the search 'highlight box'

--- a/docs/_static/code.css
+++ b/docs/_static/code.css
@@ -115,8 +115,9 @@ div.document div.notranslate.highlight-default {
   counter-increment: cc;
   display: flex;
   flex-direction: row;
-  padding: 0;
   margin: 0 0 24px 0;
+  overflow-x: scroll;
+  padding: 0;
 }
 
 div.document div.notranslate.highlight-python + div.highlight-pycon,
