--- a/docs/_static/wren.css
+++ b/docs/_static/wren.css
@@ -11,6 +11,7 @@
   --right-menu-width: 240px;
   --document-width: 900px;
   --document-x-margin: clamp(10px, 2.5vw, 40px);
+  --document-padding: min(40px, 4vw);
 
   --font-sans: Lato,proxima-nova,"Segoe UI",Roboto,Helvetica Neue,Arial,sans-serif;
   --font-mono: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
@@ -67,6 +68,9 @@ table {
   margin-bottom: 1rem;   /* same as a paragraph */
 }
 
+.list-table {
+  overflow-x: scroll;
+}
 
 
 /*------------------------------------------------------------------------------
@@ -99,7 +103,7 @@ h4 {
 /* Level-3 and level-4 sections, corresponding to <h3> and <h4> */
 .section > .section > .section,
 .section > .section > .section > .section {
-  margin-left: 24px;
+  margin-left: calc(var(--document-padding) / 2);
 }
 
 a.headerlink {
@@ -129,6 +133,10 @@ h4:hover a.headerlink {
 /*------------------------------------------------------------------------------
  * Lists
  *----------------------------------------------------------------------------*/
+
+dl, ol, ul {
+  padding-inline-start: calc(var(--document-padding) * 0.6 + 40px * 0.4);
+}
 
 li {
   margin-bottom: 1rem;
@@ -418,17 +426,18 @@ div.nav-right > #toc-local a.list-group-item.active {
 div.document-wrapper {
   flex: 25;
   max-width: var(--document-width);
-  min-width: calc(var(--document-width) * 2/3);
+  min-width: min(100vw, calc(var(--document-width) * 2/3));
   margin-bottom: 25px;
   margin-left: var(--document-x-margin);
   margin-top: 25px;
+  overflow-x: hidden;
 }
 
 div.document {
   background-color: white;
   border-radius: 2pt;
   box-shadow: 0 0 4px 1px rgba(80, 80, 80, 0.25);
-  padding: 40px;
+  padding: var(--document-padding);
 }
 
 div.copyright {
@@ -497,7 +506,7 @@ div.highlight-box {
   border-style: none solid;
   display: flex;
   height: 100%;
-  left: calc(var(--left-menu-width) + 40px);
+  left: calc(var(--left-menu-width) + var(--document-x-margin));
   padding: 3px 8px;
   position: absolute;
   top: 0;
@@ -686,12 +695,20 @@ div.rst-versions div.rst-other-versions dl:nth-child(5) { display: none; }
     transition: left 0.3s;
   }
 
+  div.sidebar-left-area:not(.active) .sidebar-left-bg {
+    box-shadow: none;
+  }
+
   div.sidebar-left-area.active {
     left: 0;
   }
 
   body > div.main-area {
     margin-left: 0;
+  }
+
+  div.highlight-box {
+    left: 55px;
   }
 
   body > div.main-area > div.document-wrapper {
